# cortex-engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/cortex/: cli.py  cli_llm.py  config.py
src/cortex/agent/: executor.py  loop.py  models.py
src/cortex/llm/: __init__.py  errors.py  json_extract.py  planner.py  provider_llamacpp.py
src/cortex/runtime/: config.py  logging.py  session.py
src/cortex/security/: approvals.py  passwords.py  path_guard.py  policy_engine.py  secret_scanner.py  secure_mode.py
src/cortex/tools/: base.py  browser.py  email.py  filesystem.py  registry.py
src/cortex_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_smoke.py
